# ADV-Simulator

./: .gitignore  CMakeLists.txt  README.md  Simulator  notes.txt
Debug/: Simulator.ilk
battle/: battle.cpp  battle.hpp  team.cpp  team.hpp
include/: attackmove.hpp  base_stats.hpp  benchmark.hpp  item.hpp  items.hpp  moves.hpp  natures.hpp  pokemon.hpp  rng.hpp  species.hpp  state.hpp  statnames.hpp  status.hpp  type.hpp  weather.hpp
replays/: -1001437553.html  -1002262434.html
src/: attackmove.cpp  base_stats.cpp  constants.hpp  define.hpp  main.cpp  moves.cpp  pokemon.cpp  rng.cpp  state.cpp
src/attackmove/: attackmove.cpp  attackmove.hpp  effectiveness.cpp  effectiveness.hpp
src/battle/: battle.cpp  battle.hpp  damage_calc.cpp  decide_move.cpp  log.cpp  transition.hpp  turn.cpp  use_move.cpp
src/data/: abilities.hpp  base_stats.cpp  base_stats.hpp  category.cpp  category.hpp  gender.hpp  item.cpp  item.hpp  movecategory.hpp  moves.cpp  moves.hpp  natures.hpp  species.cpp  species.hpp  statnames.hpp  status.hpp  type.hpp  weather.hpp
src/pokemon/: pokemon.cpp  pokemon.hpp
src/string_conversions/: ability.cpp  ability.hpp  from_string.hpp  gender.cpp  gender.hpp  item.cpp  item.hpp  moves.cpp  moves.hpp  nature.cpp  nature.hpp  species.cpp  species.hpp  status.cpp  status.hpp  string_conversions.cpp  string_conversions.hpp  type.cpp  type.hpp  weather.cpp  weather.hpp
src/team/: team.cpp  team.hpp
src/test/: import_test.cpp  import_test.hpp  mechanic_test.cpp  mechanic_test.hpp  move_test.cpp  move_test.hpp  team_test.hpp  test.cpp  test.hpp  test_moves.cpp  test_moves.hpp  test_pokemon.hpp
src/tools/: benchmark.hpp  import.cpp  import.hpp  logic.hpp  rng.cpp  rng.hpp  state.cpp  state.hpp
string_conversions/: ability.cpp  ability.hpp  conversion.hpp  gender.cpp  gender.hpp  item.cpp  item.hpp  moves.hpp  nature.cpp  nature.hpp  species.hpp  status.cpp  status.hpp  type.cpp  type.hpp
teams/export/: sample.txt
teams/packed/: sample.txt
test/: main.cpp
tests/: battle_test.cpp  init_test.cpp  tests.hpp
